Fix the visibility of the border on the Avatar block

--- a/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
+++ b/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
@@ -155,6 +155,34 @@
 		}
 	}
 
+	//! Avatar
+	.wp-block-avatar {
+		:where([style*=border-width]),
+		:where(.has-border-color) {
+			border-style: solid;
+		}
+	
+		:where([style*="border-top-width"]),
+		:where([style*="border-top-color"]) {
+			border-top-style: solid;
+		}
+	
+		:where([style*="border-right-width"]),
+		:where([style*="border-right-color"]) {
+			border-right-style: solid;
+		}
+	
+		:where([style*="border-bottom-width"]),
+		:where([style*="border-bottom-color"]) {
+			border-bottom-style: solid;
+		}
+	
+		:where([style*="border-left-width"]),
+		:where([style*="border-left-color"]) {
+			border-left-style: solid;
+		}
+	}
+
 	//! Video
 	.wp-block-video {
 
