--- a/src/wp-content/themes/twentynineteen/style.css
+++ b/src/wp-content/themes/twentynineteen/style.css
@@ -5492,6 +5492,31 @@ body.page .main-navigation {
   }
 }
 
+.entry .entry-content .wp-block-avatar :where([style*=border-width]),
+.entry .entry-content .wp-block-avatar :where(.has-border-color) {
+  border-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-top-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-top-color"]) {
+  border-top-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-right-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-right-color"]) {
+  border-right-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-bottom-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-bottom-color"]) {
+  border-bottom-style: solid;
+}
+
+.entry .entry-content .wp-block-avatar :where([style*="border-left-width"]),
+.entry .entry-content .wp-block-avatar :where([style*="border-left-color"]) {
+  border-left-style: solid;
+}
+
 .entry .entry-content .wp-block-video video {
   width: 100%;
 }
